Finished styling the game
Added:
-restart button
-display showing the next player and winner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <div class="container">
+      <div>
+        <label for="turn">Next up:</label>
+        <div id="turn">X</div>
+      </div>
       <div id="gameBoard">
         <div class="field" data-index="0"></div>
         <div class="field" data-index="1"></div>
@@ -20,6 +24,9 @@
         <div class="field" data-index="6"></div>
         <div class="field" data-index="7"></div>
         <div class="field" data-index="8"></div>
+      </div>
+      <div id="restart">
+        <button id="restartButton">Restart</button>
       </div>
     </div>
   </body>
